2007-07-06  Sven Neumann  <sven@gimp.org>

	* Made 2.2.16 release.

2007-07-06  Sven Neumann  <sven@gimp.org>

	Merged from trunk (patches written by Mukund):

	* plug-ins/common/psd.c
	* plug-ins/common/sunras.c: validate size values read from files
	before using them to allocate memory.

2007-07-05  Raphaël Quinet  <raphael@gimp.org>

	Merged several patches from trunk (written by Sven and myself):

	* plug-ins/common/psp.c: error handling cleanup.

	* plug-ins/common/psd.c (do_layer_record): check for invalid
	number of channels in a layer.

	* plug-ins/common/pcx.c (load_image): check for invalid image
	width or height.

	* plug-ins/bmp/bmpread.c: check for invalid image width or height,
	return if the image could not be read instead of trying to set the
	resolution or to flip a non-existing image.  Fixes bug #453973.

2007-07-05  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/xcf/xcf-read.c (xcf_read_int32) (xcf_read_int8): return the
        number of bytes that have been read from the file.

        * app/xcf/xcf-load.c (xcf_load_prop): return FALSE when reading fails.

2007-07-05  Raphaël Quinet  <raphael@gimp.org>

	Merged several patches from trunk (written by Mukund Sivaraman and
	myself):

	* plug-ins/common/dicom.c
	* plug-ins/common/pnm.c
	* plug-ins/common/psd.c
	* plug-ins/common/psp.c
	* plug-ins/common/sunras.c
	* plug-ins/common/xbm.c
	* plug-ins/common/xwd.c: validate size values read from files
	before using them to allocate memory.  Fixes bug #451379, brought
	to our attention by Sean Larsson of iDefense Labs.

2007-07-04  Sven Neumann  <sven@gimp.org>

	Merged from trunk (libgimpconfig/gimpconfig-deserialize.c):

	* app/config/gimpconfig-deserialize.c: be forward-compatible by
        skipping unknown object properties.

2007-07-04  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-load.c (xcf_load_image): fixed the change that was
	applied to deal with bug #316207. Fixes bug #443097.

2007-06-18  Sven Neumann  <sven@gimp.org>
